--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 beautifulsoup4==4.12.3
+mypy==1.8.0
 requests==2.31.0
 ruff==0.3.0
+types-beautifulsoup4==4.12.0.20240229
+types-requests==2.31.0.20240218
